<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Login Activity Strings -->
    <string name="app_name">Bright</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="login_activity_username_hint">Username</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_activity_login_button">LOGIN</string>
    <string name="login_activity_signup_textview">Don\'t have an account? Click here to sign up!</string>
    <string name="login_activity_error_title">Oops!</string>
    <string name="login_activity_error_message">Incorrect username and/or password. Please try again.</string>

    <!-- Signup Activity Strings -->
    <string name="signup_activity_username_hint">Username</string>
    <string name="signup_activity_email_hint">E-mail</string>
    <string name="signup_activity_password_hint">Password</string>
    <string name="signup_activity_signup_button">SIGN UP</string>
    <string name="signup_activity_cancel_button">CANCEL</string>
    <string name="signup_activity_error_title">Oops!</string>
    <string name="signup_activity_error_message">Incorrect username add/or password. Please try again.</string>

</resources>