<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.malffej.bright.SignupActivity" >

    <EditText
        android:id="@+id/signupActivityUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/signup_activity_username_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signupActivityEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signupActivityUsernameEditText"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_activity_email_hint" />

    <EditText
        android:id="@+id/signupActivityPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signupActivityEmailEditText"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/signup_activity_password_hint" />

    <Button
        android:id="@+id/signupActivitySignupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signupActivityPasswordEditText"
        android:text="@string/signup_activity_signup_button" />

    <Button
        android:id="@+id/signupActivityCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signupActivitySignupButton"
        android:text="@string/signup_activity_cancel_button" />

</RelativeLayout>