<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.malffej.bright.LoginActivity" >

    <EditText
        android:id="@+id/loginActivityUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/login_activity_username_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginActivityPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginActivityUsernameEditText"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_activity_password_hint" />

    <Button
        android:id="@+id/loginActivityLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginActivityPasswordEditText"
        android:text="@string/login_activity_login_button" />

    <TextView
        android:id="@+id/loginActivitySignupTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginActivityLoginButton"
        android:text="@string/login_activity_signup_textview"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>